--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NganjukAbirupa">
+        android:theme="@style/Theme.NganjukAbirupa"
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <!-- Splash screen sebagai launcher -->
         <activity
