feat: Add initial RegisterActivity class
Adds the `RegisterActivity.java` file with an empty class definition.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
         <activity
             android:name=".PemesananActivity"
             android:exported="false" />
+        <activity android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity android:name=".RiwayatActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
