--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Izin akses internet -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -16,7 +17,7 @@
         android:theme="@style/Theme.NganjukAbirupa"
         android:networkSecurityConfig="@xml/network_security_config">
 
-        <!-- Splash screen sebagai launcher -->
+        <!-- Launcher -->
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -26,20 +27,18 @@
             </intent-filter>
         </activity>
 
-        <!-- Login screen -->
-        <!-- Main screen -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".DashboardActivity"
-            android:exported="false" />
-        <activity android:name=".ProfileActivity"
-            android:exported="false" />
-
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="false" />
+        <!-- Aktivitas lainnya -->
+        <activity android:name=".MainActivity" android:exported="false" />
+        <activity android:name=".DashboardActivity" android:exported="false" />
+        <activity android:name=".ProfileActivity" android:exported="false" />
+        <activity android:name=".RegisterActivity" android:exported="false" />
+        <activity android:name=".PemesananActivity" android:exported="false" />
+        <activity android:name=".RiwayatActivity" android:exported="false" />
+        <activity android:name=".DetailGoa" android:exported="false" />
+        <activity android:name=".DetailSedudo" android:exported="false" />
+        <activity android:name=".DetailSri" android:exported="false" />
+        <activity android:name=".DetailRoro" android:exported="false" />
+        <activity android:name=".DetailTral" android:exported="false" />
     </application>
 
 </manifest>
