feat: Add initial RegisterActivity class
Adds the `RegisterActivity.java` file with an empty class definition.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
         <activity android:name=".DetailSri" android:exported="false" />
         <activity android:name=".DetailRoro" android:exported="false" />
         <activity android:name=".DetailTral" android:exported="false" />
+        <activity android:name=".DetailRiwayatActivity" android:exported="false"/>
+        <activity android:name=".QrCodeActivity" android:exported="false" />
     </application>
 
 </manifest>
