feat: Add initial RegisterActivity class
Adds the `RegisterActivity.java` file with an empty class definition.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         <activity android:name=".RegisterActivity" android:exported="false" />
         <activity android:name=".PemesananActivity" android:exported="false" />
         <activity android:name=".DetailGoa" android:exported="false" />
+        <activity android:name=".DetailWisata" android:exported="false" />
+        <activity android:name=".DetailWisataGeneric" android:exported="false" />
         <activity android:name=".RiwayatActivity" android:exported="false" />
         <activity android:name=".PilihPengunjungActivity" android:exported="false" />
         <activity android:name=".DetailSedudo" android:exported="false" />
